--- a/ChatWave/Chat/templates/chat/chat.html
+++ b/ChatWave/Chat/templates/chat/chat.html
@@ -114,7 +114,7 @@
                         <img src="{{message.message}}" class="gif-image">
                     </div>
                     {% elif message.message|slice:":26" == "https://res.cloudinary.com" %}
-                    <img src="{{message.message}}" class="sent-image">
+                    <img src="{{message.message}}" class="gif-image">
                 </div>
                 {%else%}
                 <h3 class="text-message"> {{ message.message }} </h3>
@@ -122,11 +122,7 @@
             {%endif%}
         </div>
 
-
-
-
         {% else %}
-
         <div class="message sent">
             <img src="{{request.user.profilePicture}}" alt="userimage">
             <div class="user" id="{{message.id}}">You
@@ -136,7 +132,7 @@
                 <img src="{{message.message}}" class="gif-image">
             </div>
             {% elif message.message|slice:":26" == "https://res.cloudinary.com" %}
-            <img src="{{message.message}}" class="sent-image">
+            <img src="{{message.message}}" class="gif-image">
         </div>
         {%else%}
         <h3 class="text-message"> {{ message.message }} </h3>
@@ -754,21 +750,23 @@ function deleteNotification(notificationId) {
             });
         }
 
-        const selectors = [".gif-image", ".sent-image"];
         const modal = document.getElementById("imageModal");
         const modalContent = modal.querySelector(".image-area");
-
-        selectors.forEach(selector => {
-            document.querySelectorAll(selector).forEach(element => {
-                element.addEventListener("click", (event) => {
-                    modalContent.innerHTML = "";
-                    const img = document.createElement("img");
-                    img.src = event.target.src;
+        const chatContainer = document.querySelector(".chat-section"); 
+        
+        chatContainer.addEventListener("click", (event) => {
+            if (event.target.classList.contains("gif-image") || event.target.classList.contains("sent-image")) {
+                modalContent.innerHTML = "";
+                const img = document.createElement("img");
+                img.src = event.target.src;
+                img.onload = () => {
                     modalContent.appendChild(img);
                     modal.classList.add("active");
-                });
-            });
+                };
+            }
         });
+        
+        
 
         modal.addEventListener("click", (event) => {
             if (event.target === modal) {
@@ -1010,7 +1008,7 @@ function deleteNotification(notificationId) {
 
                         const messageImg = document.createElement('img');
                         messageImg.src = message;
-                        messageImg.className = "sent-image";
+                        messageImg.className = "gif-image";
 
 
                         userDiv.appendChild(usernameLink);
